--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Build, provide and recruit travelling teams world wide.">
     <meta name="keywords" content="hire a team, hire experts, recruiting, career, jobs, carreer opportunities">
+    <meta name="google-site-verification" content="0QYVOJBW5veU_wlTjyaV4rzH78ZYyBPR-IwFU9tCThI" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
