--- a/public/index.html
+++ b/public/index.html
@@ -39,4 +39,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org/",
+      "@type": "Organization",
+      "name": "Godspeed-team",
+      "url": "http://godspeed.team",
+      "email": "support@godspeed.team",
+      "logo": "http://godspeed.team/favicon.ico",
+      "founder": {
+        "name": "Rainer Jung",
+        "sameAs":["https://github.com/rynr","https://plus.google.com/+RainerJung","https://twitter.com/rjung","https://www.linkedin.com/in/rainerjung"]
+      }
+    }
+  </script>
 </html>
